# shunt

./: .gitignore  .worktreeinclude  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  llms.txt  orca.yaml  shunt.toml.example  shunt.yaml.example  sonar-project.properties
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.please/: INDEX.md  config.yml
benches/: gateway.rs
docs/: RELEASING.md  add-command.md  codex-configuration.md  comparison.md  config-reload.md  desktop-app.md  gateway-login.md  gateway-managed-settings.md  gateway-protocol.md  implementation-plan.md  init-command.md  m1-responses-translation.md  m10-codex-multi-account.md  m11-inbound-codex-endpoint.md  m12-client-usage-endpoint.md  m14-oauth-usage-endpoint.md  m2-chatgpt-oauth.md  m3-discovery.md  m4-inbound-auth.md  m5-sse-keepalive.md  m6-xai-provider.md  m7-account-load-balancing.md  m7-codex-websocket.md  m8-anthropic-multi-account.md  m9-admin-surface.md  running.md  upstreams-failover.md
site/: astro.config.mjs  package-lock.json  package.json
src/: AGENTS.md  accounts.rs  atomic_file.rs  blueprints.rs  catalog.rs  codex_analytics.rs  codex_endpoint.rs  config.rs  count_tokens.rs  dashboard.rs  discovery.rs  error.rs  headers.rs  init.rs  keepalive.rs  lib.rs  main.rs  metrics.rs  oauth_usage.rs  protocol.rs  proxy.rs  reload.rs  retry.rs  routes.rs  routing.rs  server.rs  state_persist.rs  stream_metrics.rs  (+3 more)
(+327 files in other folders)
